--- a/translations/messages+intl-icu.fr.yaml
+++ b/translations/messages+intl-icu.fr.yaml
@@ -12,7 +12,7 @@ index:
     in: 'dans'
     already_account: 'Vous avez déjà un compte ?'
     log_in: 'Connectez-vous '
-    begin: 'Commnercer'
+    begin: 'Commencer'
     dream: 'Contez <br> votre rêve'
     discover: 'et découvrez les songes similaires.'
 globe:
