--- a/translations/messages+intl-icu.fr.yaml
+++ b/translations/messages+intl-icu.fr.yaml
@@ -21,7 +21,7 @@ footer:
     notice: 'Mentions légales'
 why:
     title: 'Pourquoi?'
-    text: "Nous sommes intimement convaincus que le rêve peut nous lier à la nature, ainsi qu'à notre environnement social et culturel.<br> En partageant nos rêves nous contribuons à la création d'une intelligence collective nouvelle.<br> Un artiste français porte l'idée de reveurdream.com, parce qu'il pense que le rêve peut sans doute être une source d'inspiration, de création, comme une muse insondable mais apporter aussi une meilleure compréhension de notre humanité."
+    text: "Nous sommes intimement convaincus que le rêve peut nous lier à la nature, ainsi qu'à notre environnement social et culturel.<br> En partageant nos rêves nous contribuons à la création d'une intelligence collective nouvelle.<br> Un artiste français porte l'idée de reveurdream.com, parce qu'il pense que le rêve peut sans doute être une source d'inspiration, de création, comme une muse insondable mais apporter aussi une meilleure compréhension de notre humanité.<br>Anne-Sophie Bordry"
 register:
     title: 'Inscrivez-vous'
     pseudo: 'Pseudo'
