--- a/translations/messages+intl-icu.fr.yaml
+++ b/translations/messages+intl-icu.fr.yaml
@@ -13,7 +13,7 @@ index:
     already_account: 'Vous avez déjà un compte ?'
     log_in: 'Connectez-vous '
     begin: 'Commencer'
-    dream: 'Partager <br> votre rêve'
+    dream: 'Partagez <br> votre rêve'
     discover: 'et découvrez les songes similaires.'
 globe:
     filter: 'filtrer les rêves'
@@ -32,6 +32,7 @@ register:
     password_min_length: 'Le mot de passe doit contenir au moins 6 caractères'
     submit: 'Valider'
     previous: 'Précédent'
+    text: 'Inscription et publication'
 dream:
     edit: 'Modifier le rêve'
     info: 'Infos sur le rêve'
@@ -66,16 +67,15 @@ dream:
                     <p>Votre rêve restera visible 24h sur la Terre avant d’être caché pour le public.<br/>
                         Si vous le souhaitez, <b>vous pouvez vous inscrire avant de publier.</b></p>
 
-                    <p class="step5-text">Que pouvez-vous faire avec votre compte ?</p>
                     <p>Modifier votre rêve si besoin<br/>
                         Garder une trace de votre rêve (au delà des 24h)<br/>
-                        Liker les rêves des autres<br/>
-                        Voir les rêves similaires</p>'
+                        Liker les rêves des autres</p>'
     register_no: "Publier sans s'inscrire"
     register_yes: "Publier en s'inscrivant"
     theme: 'Quel était le thème<br/> de ce songe ?'
     reset_time: 'messages'
     view: 'vues'
+    register_save: 'Enregistrer mon rêve comme brouillon'
 category:
     dream: 'Etait-ce un rêve '
     nightmare: 'ou un cauchemar'
