--- a/translations/messages+intl-icu.en.yaml
+++ b/translations/messages+intl-icu.en.yaml
@@ -93,6 +93,8 @@ user:
     delete: 'Delete my account'
     delete_success: 'Your account has been deleted'
     delete_confirm: 'Are you sure you want to delete your account?'
+    password_request: 'Send password reset email'
+    password_new: 'New password'
 mail:
     creation:
         title: 'Create your Reveurdream account'
