--- a/translations/messages+intl-icu.fr.yaml
+++ b/translations/messages+intl-icu.fr.yaml
@@ -94,6 +94,8 @@ user:
     delete: 'Supprimer mon compte'
     delete_success: 'Votre compte a été supprimé'
     delete_confirm: 'Êtes-vous sûr de vouloir supprimer votre compte ?'
+    password_request: 'Envoyer la demande de réinitialisation de mot de passe'
+    password_new: 'Nouveau mot de passe'
 mail:
     creation:
         title: 'Création de votre compte Reveurdream'
