--- a/translations/messages+intl-icu.en.yaml
+++ b/translations/messages+intl-icu.en.yaml
@@ -107,3 +107,4 @@ login:
     mail: 'Mail address'
     incorrect_password: 'Incorrect password'
     valider: 'Commit changes'
+    with_register: 'Sign up with'
