--- a/translations/messages+intl-icu.fr.yaml
+++ b/translations/messages+intl-icu.fr.yaml
@@ -95,6 +95,9 @@ user:
     delete_confirm: 'Êtes-vous sûr de vouloir supprimer votre compte ?'
     password_request: 'Envoyer la demande de réinitialisation'
     password_new: 'Nouveau mot de passe'
+    connect: 'Me connecter'
+    confirm_registration: "Confirmation d'inscription"
+    confirm_registration_text: "Votre inscription<br/>est validée !"
 mail:
     creation:
         title: 'Création de votre compte Reveurdream'
