--- a/translations/messages+intl-icu.es.yaml
+++ b/translations/messages+intl-icu.es.yaml
@@ -98,6 +98,7 @@ user:
     connect: 'Iniciar sesión'
     confirm_registration: 'Confirmación de registro'
     confirm_registration_text: '¡Su registro<br/>ha sido validado!'
+    send: 'Enviar'
 mail:
     creation:
         title: 'Creando su cuenta Reveurdream'
