--- a/translations/messages+intl-icu.es.yaml
+++ b/translations/messages+intl-icu.es.yaml
@@ -119,3 +119,11 @@ login:
     valider: 'Validar modificaciones'
     with_register: 'Registrarse con'
     already: 'Ya tienes una cuenta? Inicia sesión'
+filtre:
+    dream: 'sueño'
+    cauchemar: 'pesadilla'
+    social: 'Social, familia, gente'
+    perso: 'Personal'
+    work: 'Trabajar'
+    travel: 'Viajes'
+    animal: 'Animales'
